# agentwerk

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md
agentdocs/: architecture.md  layout.md  project.md  style.md  this.md  workflow.md
crates/agent/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: minimal_agent.rs
crates/agent-core/src/: agent.rs  lib.rs  provider.rs  testutil.rs  tool.rs
crates/agent-core/src/agent/: builder.rs  context.rs  event.rs  loop.rs  mod.rs  output.rs  queue.rs
crates/agent-core/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  list_directory.rs  mod.rs  read_file.rs  spawn_agent.rs  task_tools.rs  tool_search.rs  write_file.rs
crates/agent/examples/: agent_with_tools.rs  code_review.rs  multi_agent_spawn.rs
crates/agent/src/: lib.rs  testutil.rs
crates/agent/src/agent/: agent.rs  builder.rs  context.rs  event.rs  loop.rs  mod.rs  output.rs  prompt.rs  trait.rs
crates/agent/src/persistence/: mod.rs  session.rs  task.rs
crates/agent/src/provider/: anthropic.rs  cost.rs  litellm.rs  mistral.rs  mod.rs  openai.rs  provider.rs  sse.rs  trait.rs  types.rs
crates/agent/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  list_directory.rs  mod.rs  read_file.rs  spawn_agent.rs  task_tools.rs  tool.rs  tool_search.rs  write_file.rs
crates/agent/tests/: agent_with_tools.rs  multi_agent_spawn.rs  project_planning.rs  quick_start.rs  task_and_session_store.rs
crates/agentcore/: Cargo.toml
crates/agentcore/src/: error.rs  lib.rs  testutil.rs
crates/agentcore/tests/: agent_with_tools.rs  bash_usage.rs  code_review.rs  llm_provider_call.rs  multi_agent_spawn.rs  pipeline.rs  project_planning.rs  quick_start.rs
crates/agentwerk/: Cargo.toml  results.jsonl
crates/agentwerk/src/: error.rs  event.rs  lib.rs  output.rs  persistence.rs  test_util.rs  testutil.rs  util.rs  werk.rs
crates/agentwerk/src/agent/: agent.rs  batch.rs  builder.rs  compact.rs  context.rs  error.rs  event.rs  loop.rs  mod.rs  output.rs  pipeline.rs  pool.rs  prompts.rs  queue.rs  retain.rs  running.rs  spawn.rs  spec.rs  trait.rs  werk.rs
crates/agentwerk/src/agents/: agent.rs  compact.rs  compaction.rs  knowledge.rs  loop.rs  mod.rs  policy.rs  retry.rs  stats.rs  tickets.rs
crates/agentwerk/src/agents/loop/: 1_main.rs  2_turn.rs  3_compaction.rs  4_reply.rs  5_tool_call.rs  mod.rs  test_util.rs
crates/agentwerk/src/agents/tickets/: error.rs  mod.rs  reply.rs  store.rs  test_util.rs  ticket.rs  ticket_system.rs
crates/agentwerk/src/codegrep/: ast.rs  conf.rs  matcher.rs  matcher_tests.rs  mod.rs  parser_tests.rs  token.rs
crates/agentwerk/src/persistence/: error.rs  lock.rs  mod.rs  session.rs  task.rs  todo.rs
crates/agentwerk/src/prompts/: compaction.directive.md  default.context.md  mod.rs  retry.directive.md
crates/agentwerk/src/provider/: anthropic.rs  environment.rs  error.rs  litellm.rs  mistral.rs  mod.rs  model.rs  openai.rs  retry.rs  trait.rs  types.rs
crates/agentwerk/src/providers/: anthropic.rs  environment.rs  litellm.rs  mistral.rs  mod.rs  model.rs  openai.rs  patterns.rs  provider.rs  types.rs
crates/agentwerk/src/schemas/: mod.rs
crates/agentwerk/src/tools/: agent.rs  bash.rs  bash.tool.md  codegrep.rs  codegrep.tool.json  codegrep.tool.md  edit_file.rs  edit_file.tool.md  error.rs  fetch_url.rs  fetch_url.tool.json  fetch_url.tool.md  find_tools.rs  find_tools.tool.json  find_tools.tool.md  glob.rs  glob.tool.md  grep.rs  grep.tool.json  grep.tool.md  knowledge.rs  list_directory.rs  list_directory.tool.md  manage_knowledge.rs  manage_knowledge.tool.json  manage_knowledge.tool.md  memory.rs  mod.rs  read_file.rs  read_file.tool.json  read_file.tool.md  send_message.rs  spawn_agent.rs  task_tools.rs  todo_list.rs  tool.rs  tool_file.rs  tool_search.rs  util.rs  web_fetch.rs  (+2 more)
crates/agentwerk/src/tools/tickets/: finish_ticket.rs  finish_ticket.tool.json  finish_ticket.tool.md  handover_ticket.rs  handover_ticket.tool.json  handover_ticket.tool.md  manage_tickets.rs  manage_tickets.tool.json  manage_tickets.tool.md  mod.rs  read_tickets.rs  read_tickets.tool.json  read_tickets.tool.md  write_handover.rs  write_result.rs  write_result.tool.json
crates/agentwerk/tests/: bash_usage.rs  integration.rs  multi_agent_spawn.rs  peer_messaging.rs  pipeline.rs  pool.rs  structured_output.rs  unit.rs
crates/agentwerk/tests/common/: mod.rs
crates/agentwerk/tests/integration/: bash_usage.rs  batch.rs  codegrep_finds_by_shape.rs  compaction.rs  edit_file_replaces_content.rs  file_exploration.rs  find_tools_discovers_deferred.rs  glob_finds_nested_files.rs  grep_content_output.rs  grep_finds_code_pattern.rs  list_directory_enumerates_entries.rs  manage_tickets_creates_ticket.rs  multi_agent_spawn.rs  peer_messaging.rs  pool.rs  project_planning.rs  read_tickets_finds_seeded.rs  running_agent.rs  traces_call_path_across_files.rs  werk.rs  write_file_creates_file.rs
crates/agentwerk/tests/unit/: context_window_events.rs  running_agent.rs  structured_output.rs
crates/use-cases/: Cargo.toml
crates/use-cases/src/: lib.rs
crates/use-cases/src/deep_research/: main.rs
crates/use-cases/src/deep_research/prompts/: report-writer.role.md
crates/use-cases/src/divide_and_conquer/: main.rs
crates/use-cases/src/divide_and_conquer/prompts/: agent.role.md  worker.role.md
crates/use-cases/src/malware_scanner/: cli.rs  main.rs  report.rs  scan.rs  signals.rs  transform_iocs.py
crates/use-cases/src/malware_scanner/agents/: explorer.md  reporter.md  security-analyst.md  threat-researcher.md
crates/use-cases/src/malware_scanner/roles/: reporter.md  security-analyst.md  threat-researcher.md
crates/use-cases/src/malware_scanner/threats/: cpp.json  go.json  haskell.json  javascript.json  python.json  rust.json
crates/use-cases/src/model_pricing_tracker/: main.rs
crates/use-cases/src/project_scanner/: main.rs
crates/use-cases/src/terminal_repl/: main.rs
crates/use-cases/src/terminal_repl/prompts/: bible.txt  repl.role.md
specs/: 2026-04-16-session-resumption.md
(+34 files in other folders)
