[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "minimal_provider"

[[example]]
name = "minimal_agent"
