[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "provider"

[[example]]
name = "agent_tool_use"

[[example]]
name = "orchestration"

[[example]]
name = "persistence"
