[package]
name = "agent"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
