[package]
name = "agentwerk"
version = "0.1.15"
edition = "2021"
license = "MIT"
description = "A minimal Rust crate that gives any application agentic capabilities."
repository = "https://github.com/canvascomputing/agentwerk"
readme = "../../README.md"
keywords = ["agent", "llm", "ai", "tools", "agentic"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time", "signal", "test-util"] }
