[package]
name = "use-cases"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
agentcore = { path = "../agentcore" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "project-scanner"
path = "src/project_scanner/main.rs"

[[bin]]
name = "deep-research"
path = "src/deep_research/main.rs"
