[package]
name = "use-cases"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
agentwerk = { path = "../agentwerk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"

[[bin]]
name = "project-scanner"
path = "src/project_scanner/main.rs"

[[bin]]
name = "deep-research"
path = "src/deep_research/main.rs"

[[bin]]
name = "model-pricing-tracker"
path = "src/model_pricing_tracker/main.rs"

[[bin]]
name = "terminal-repl"
path = "src/terminal_repl/main.rs"
